Updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -35,34 +35,32 @@ profile
 *.OTHER
 
 # monodevelop project files
-unitysrc/Library
-unitysrc/Temp
-unitysrc/Assembly-CSharp-Editor-vs.csproj
-unitysrc/Assembly-CSharp-Editor.csproj
-unitysrc/Assembly-CSharp-firstpass-vs.csproj
-unitysrc/Assembly-CSharp-firstpass.pidb
-unitysrc/Assembly-CSharp-vs.csproj
-unitysrc/Assembly-CSharp.csproj
-unitysrc/Assembly-CSharp.pidb
-unitysrc/Assembly-UnityScript.pidb
-unitysrc/assembly-csharp-firstpass.csproj
-unitysrc/assembly-unityscript-vs.unityproj
-unitysrc/assembly-unityscript.unityproj
-unitysrc/Assembly-UnityScript-Editor-firstpass-vs.unityproj
-unitysrc/Assembly-UnityScript-Editor-firstpass.unityproj
-unitysrc/Assembly-UnityScript-firstpass-vs.unityproj
-unitysrc/Assembly-UnityScript-firstpass.unityproj
-unitysrc/Assembly-UnityScript-vs.unityproj
-unitysrc/Assembly-UnityScript.unityproj
-unitysrc/unitysrc.userprefs
-unitysrc/Assembly-Boo-vs.booproj
-unitysrc/Assembly-Boo.booproj
+Assessment/Library
+Assessment/Temp
+Assessment/Assembly-CSharp-Editor-vs.csproj
+Assessment/Assembly-CSharp-Editor.csproj
+Assessment/Assembly-CSharp-firstpass-vs.csproj
+Assessment/Assembly-CSharp-firstpass.pidb
+Assessment/Assembly-CSharp-vs.csproj
+Assessment/Assembly-CSharp.csproj
+Assessment/Assembly-CSharp.pidb
+Assessment/Assembly-UnityScript.pidb
+Assessment/assembly-csharp-firstpass.csproj
+Assessment/assembly-unityscript-vs.unityproj
+Assessment/assembly-unityscript.unityproj
+Assessment/Assembly-UnityScript-Editor-firstpass-vs.unityproj
+Assessment/Assembly-UnityScript-Editor-firstpass.unityproj
+Assessment/Assembly-UnityScript-firstpass-vs.unityproj
+Assessment/Assembly-UnityScript-firstpass.unityproj
+Assessment/Assembly-UnityScript-vs.unityproj
+Assessment/Assembly-UnityScript.unityproj
+Assessment/unitysrc.userprefs
+Assessment/Assembly-Boo-vs.booproj
+Assessment/Assembly-Boo.booproj
 
 .DS_Store
 
 *.userprefs
-Temp/
-Library/
 
 CharmItems_Assessment.zip
 
